--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,9 +15,9 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Log in to Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-    - name: Build and push Docker image
       run: |
-        docker build . --file Dockerfile --tag my-image-name:latest
-        docker tag my-image-name:latest my-dockerhub-username/my-image-name:latest
-        docker push my-dockerhub-username/my-image-name:latest
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          docker build . --file Dockerfile --tag my-image-name:latest
+          docker tag my-image-name:latest my-dockerhub-username/my-image-name:latest
+          docker push my-dockerhub-username/my-image-name:latest
+    
