--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,6 @@ jobs:
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           echo "${{ secrets.DOCKER_PASSWORD }}"
           docker build . --file Dockerfile --tag my-image-name:latest
-          docker tag my-image-name:latest my-dockerhub-username/my-image-name:latest
-          docker push my-dockerhub-username/my-image-name:latest
+          docker tag my-image-name:latest "${{ secrets.DOCKER_USERNAME }}"/my-image-name:latest
+          docker push "${{ secrets.DOCKER_USERNAME }}"/my-image-name:latest
     
