--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,10 +15,10 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+    - name: Build Docker Image
       run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          echo "${{ secrets.DOCKER_PASSWORD }}"
           docker build . --file Dockerfile --tag my-image-name:latest
-          docker tag my-image-name:latest "${{ secrets.DOCKER_USERNAME }}"/my-image-name:latest
-          docker push "${{ secrets.DOCKER_USERNAME }}"/my-image-name:latest
+          docker tag my-image-name:latest "${{ secrets.DOCKER_USERNAME }}"/github-action-test
+          docker push "${{ secrets.DOCKER_USERNAME }}"/github-action-test:latest
     
