--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main","feature/dev" ]
   pull_request:
     branches: [ "main" ]
 
@@ -21,6 +21,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
     - name: Build Docker Image
       run: |
+          echo "Hi Vk only for testing purpose"
           docker build . --file Dockerfile --tag my-image-name:latest
           docker tag my-image-name:latest "${{ secrets.DOCKER_USERNAME }}"/github-action-test
           docker push "${{ secrets.DOCKER_USERNAME }}"/github-action-test:latest
