created second job

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,4 +25,12 @@ jobs:
           docker build . --file Dockerfile --tag my-image-name:latest
           docker tag my-image-name:latest "${{ secrets.DOCKER_USERNAME }}"/github-action-test
           docker push "${{ secrets.DOCKER_USERNAME }}"/github-action-test:latest
-    
+  hello:
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [ ubuntu-latest ]
+
+    steps:
+      - name : Printing Hello
+        run: echo "Hello"
