--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -8,11 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "dump github context"
-        run: echo'${{ toJSON(github.events)}}' | jq
+        run: echo'${{ toJSON(github.event)}}' | jq
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v4
         with:
-          issue-number: ${{ toJSON(github.events.issue.number)}}
+          issue-number: ${{github.event.issue.number}}
           body: |
             Thanks for raising the issue 
             Our team will look into it
